# stm32_cmake_examples

./: CMakeLists.txt  Makefile  README.md  cmake_command.sh  gcc-arm-none-eabi.cmake
ex1_wm_pu_safe/: .gitignore  Makefile  gcc-arm-none-eabi.cmake
ex2_versadrive_user/: .gitignore  CMakeLists.txt  README.md  build_cmake.sh  gcc-arm-none-eabi.cmake
ex2_versadrive_user/scripts/: .clang-format  add_version.sh  build_info.sh  format_src.sh  post_build.sh  pre_build.sh
ex2_versadrive_user/src/Middlewares/Protocol/CANopen/: canopen_cfg.h  canopen_if.c
ex2_versadrive_user/src/Middlewares/Protocol/CANopen/CANopen/: IncludeBin.s  canopen.c  canopen.h  canopen_drv.c  co_401.h  co_canopen.h  co_cobhandler.c  co_commtask.c  co_commtask.h  co_datatype.h  co_direct_read.c  co_direct_read.h  co_drv.h  co_emcy.c  co_emcy.h  co_errctrl.c  co_event.c  co_led.c  co_led.h  co_lss.c  co_lss.h  co_lssmaster.c  co_nmt.c  co_nmt.h  co_nmtmaster.c  co_odaccess.c  co_odaccess.h  co_pdo.c  co_pdo.h  co_queue.c  co_sdo.h  co_sdoclient.c  co_sdoqueue.c  co_sdoserv.c  co_sleep.c  co_sleep.h  co_store.c  co_store.h  co_sync.c  co_sync.h  (+24 more)
ex2_versadrive_user/src/Middlewares/Protocol/CANopen/CO_Dictionary/GMCC_66/: co_init.c  gen_objdict.c  gen_objdict.eds  gen_objdict_variables.c
ex2_versadrive_user/src/Middlewares/Protocol/CANopen/CO_Dictionary/GMCC_66_491/: gen_objdict.c  gen_objdict.eds  gen_objdict_variables.c
ex2_versadrive_user/src/Middlewares/Protocol/CANopen/CO_Dictionary/GMCC_75/: co_init.h  gen_objdict.c  gen_objdict.eds  gen_objdict_variables.h
ex2_versadrive_user/src/Middlewares/Protocol/CANopen/CO_Dictionary/GMCC_75_491/: co_init.h  gen_objdict.c  gen_objdict.eds  gen_objdict_variables.h
ex2_versadrive_user/src/Middlewares/Protocol/CANopen/CO_Dictionary/RECHI_81/: gen_objdict.c  gen_objdict.eds
ex2_versadrive_user/src/Middlewares/Protocol/CANopen/CO_Dictionary/RECHI_81_491/: gen_objdict.c  gen_objdict.eds
ex2_versadrive_user/src/Middlewares/Protocol/Hisense/: platform_def.h  project_names.h  types.h
ex2_versadrive_user/src/Middlewares/Protocol/Hisense/Communication/: forward.c  forward.h  serialprocess.c  serialprocess.h  wifi.c  wifi.h
ex2_versadrive_user/src/Middlewares/Protocol/Hisense/Netbuf/: netbuf.c  netbuf.h
ex2_versadrive_user/src/Middlewares/Protocol/Hisense/Platform/: platform.c  platform.h  proc.c  proc.h  serialport.c  serialport.h  timer.c  timer.h
ex2_versadrive_user/src/Middlewares/Protocol/Hisense/hisense/: hisense_ApplicationL.c  hisense_ApplicationL.h  hisense_Base.c  hisense_Base.h  hisense_LinkL.c  hisense_LinkL.h  hisense_Mapping.h  hisense_Mapping_app.c  hisense_NetworkL.c  hisense_NetworkL.h  hisense_TransmissionL.c  hisense_TransmissionL.h
ex2_versadrive_user/src/Middlewares/motor_control/: motor_control_cfg.h
ex2_versadrive_user/src/Middlewares/motor_control/motor_control/: current_rec.c  current_rec.h  emDriveCodeReplacement.h  motor_control.c  motor_control.h  motor_control_fsm.c  motor_control_fsm.h  protections.c  protections.h  protections_obj.c  protections_obj.h
ex2_versadrive_user/src/Middlewares/osci/: osci_cfg.h
ex2_versadrive_user/src/Middlewares/osci/osci/: osci.c  osci.h  osci_callbacks.c  osci_internal.h  osci_parameters.c  osci_ram.c
ex2_versadrive_user/src/app/: STM32G431CBTX_FLASH_431.ld  STM32G431CBTX_FLASH_491.ld  app.c  app.h  apptime.h  build_info.c  build_info.h  func_table.c  main.c  main.h  mains_meas.c  mains_meas.h  measurements.c  measurements.h  performance_meas.c  performance_meas.h  precharge.c  precharge.h  project_config.h  relay.c  relay.h  startup_stm32g431cbtx.s  stm32g4xx_hal_conf.h  stm32g4xx_hal_msp.c  stm32g4xx_it.c  stm32g4xx_it.h  syscalls.c  sysmem.c  system.c  system.h  system_stm32g4xx.c  version.c  version.h
ex2_versadrive_user/src/app/communication/mat/: mat.c  mat.h  mat_requests.c  mat_requests.h  mat_trace.c  mat_trace.h
ex2_versadrive_user/src/app/fifobuffer/: fifobuffer_cfg.h
ex2_versadrive_user/src/app/fifobuffer/fifobuffer/: fifobuffer.c  fifobuffer.h
ex2_versadrive_user/src/app/hisense/: hisense_app.c  hisense_app_mapping.c  hisense_proto.c  hisense_proto.h  platform_cfg_common.h  project_cfg_common.h
ex2_versadrive_user/src/app/hisense/cfg/: platform_cfg.h  project_cfg.h
ex2_versadrive_user/src/app/hisense/src/: hisense_app_mapping.h  hisense_app_public.h
ex2_versadrive_user/src/app/peripheral/adc/: adc.c  adc.h  adc_cfg.h
ex2_versadrive_user/src/app/peripheral/can/: can_cfg.h
ex2_versadrive_user/src/app/peripheral/can/can/: can.c  can.h
ex2_versadrive_user/src/app/peripheral/comparator/: comparator.c  comparator.h
ex2_versadrive_user/src/app/peripheral/dac/: dac.c  dac.h
ex2_versadrive_user/src/app/peripheral/dma/: dma.c  dma.h
ex2_versadrive_user/src/app/peripheral/exti/: exti.c  exti.h
ex2_versadrive_user/src/app/peripheral/gpio/: gpio.c  gpio.h
ex2_versadrive_user/src/app/peripheral/opamp/: opamp.c  opamp.h
ex2_versadrive_user/src/app/peripheral/timer/: timer.c  timer.h  timer_cfg.h
ex2_versadrive_user/src/app/peripheral/uart/: uart_cfg.c  uart_cfg.h
ex2_versadrive_user/src/app/peripheral/uart/uart/: uart.c  uart.h
ex2_versadrive_user/src/app/peripheral/watchdog/: watchdog.c  watchdog.h
ex2_versadrive_user/src/app/trace/: trace.c  trace.h
ex2_versadrive_user/submodules/versadrive_shared/: black_channel_common.h  curr_meas_common.h  drumspin_common.h  func_table.h  memory_definition.ld  memory_definition_491.ld  mu_safe_common.h  otdet_common.h  power_mode_common.h  priorities.h  reset_status_log_common.h  safe_version_common.h  test_switch_common.h
ex2_versadrive_user/submodules/versadrive_simulink_generated/motor_variants/: emDriveFOC_control_param_GMCC_66.c  emDriveFOC_control_param_GMCC_75.c  emDriveFOC_control_param_RECHI_81.c
ex2_versadrive_user/submodules/versadrive_simulink_generated/simulink_model/: emDriveFOC_control.c  emDriveFOC_control.h  emDriveFOC_control_global.h  emDriveFOC_control_specific.h  emDriveFOC_control_types.h  emDriveTargetSpecific.h  rtmodel.c  rtmodel.h  rtwtypes.h
scripts/: add_crc.py  calc_crc.py  (+1 more)
(+87 files in other folders)
